# Galois

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Doxyfile.in  GaloisConfig.cmake  GaloisConfigVersion.cmake  Makefile  cmake_install.cmake
Testing/Temporary/: LastTest.log.tmp
attempts/: bfs_push_with_max.cpp  bfs_push_without_counter.cpp  pagerank_push_mpi.cpp  pagerank_push_sort.cpp  pagerank_push_without_counter.cpp
caching_attempts/: bfs_push_static.cpp
cmake/Modules/: FindVTune.cmake
inputs/: CTestTestfile.cmake  Makefile  cmake_install.cmake  download.cmake
inputs/meshes/: 250k.2.poly
libcusp/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
libdist/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
libdist/include/galois/: DReducible.h  DTerminationDetector.h
libdist/include/galois/runtime/: DistStats.h  Network.h  NetworkBuffered.h  NetworkIO.h  Serialize.h  concurrentqueue.h  readerwriterqueue.h
libdist/src/: Barrier.cpp  DistGalois.cpp  DistStats.cpp  Network.cpp  NetworkBuffered.cpp  NetworkIOMPI.cpp  NetworkLCI.cpp
libgalois/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Version.cpp  cmake_install.cmake
libgalois/src/: Barrier_Topo.cpp  FileGraph.cpp  HWTopoLinux.cpp  PreAlloc.cpp  ThreadPool.cpp  ThreadTimer.cpp  Threads.cpp  Timer.cpp
libgalois/test/: CTestTestfile.cmake  Makefile  bandwidth.cpp  cmake_install.cmake  unit-empty-member-lcgraph  unit-floatingPointErrors  unit-hwtopo  unit-lc-adaptor  unit-lock  unit-static  unit-traits  wakeup-overhead.cpp
libgluon/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
libgluon/src/: Cache.cpp
libpangolin/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libpygalois/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libsupport/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libsupport/test/: CTestTestfile.cmake  Makefile  (+1 more)
lonestar/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
lonestar/libdistbench/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
lonestar/libdistbench/include/DistBench/: Input.h  Output.h  Start.h
lonestar/libdistbench/src/: Input.cpp  Start.cpp
scripts/: CTestTestfile.cmake  Makefile  cmake_install.cmake  make_dist.sh
tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+801 files in other folders)
